<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UmpireBuddy</string>
    <string name="ball_button">Ball</string>
    <string name="strike_button">Strike</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="ball_display">Balls:</string>
    <string name="strike_display">Strikes:</string>
    <string name="walk_msg">Walk!</string>
    <string name="out_msg">Out!</string>
    <string name="title_activity_about">About</string>
    <string name="about_msg">Umpire Buddy 2.0 by Michael Harris</string>
    <string name="about_menu">About</string>
    <string name="reset_menu">Reset</string>
    <string name="info_menu">More Info</string>
    <string name="msg_menu">Message</string>
    <string name="total_outs">Outs</string>
    <string name="out_display">Total Outs:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
